--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,13 +24,13 @@ android {
         abortOnError false
     }
 
-    compileSdkVersion 30
-    buildToolsVersion "30.0.3"
+    compileSdkVersion 31
+    buildToolsVersion "31.0.0"
 
     defaultConfig {
         applicationId "com.xysss.keeplearning"
         minSdkVersion 21
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode 10
         versionName "1.0.6"
 
@@ -109,7 +109,7 @@ dependencies {
     implementation project(path: ':mvvmhelper')
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.core:core-ktx:1.6.0'
     //test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -195,4 +195,13 @@ dependencies {
 
     // Anko Commons 废弃了 不建议使用
     //implementation "org.jetbrains.anko:anko:$anko_version"
+
+    //串口工具
+    def serialPortVersion = "1.0.4-SNAPSHOT"
+    implementation "io.github.zhouhuandev:serial-port-kit-manage:$serialPortVersion" // require kotlin 1.7.0
+    // 需要使用数据转换工具或串口搜索或完全自定义数据输入输出的开发者可使用 serial-port-kit-core
+    implementation "io.github.zhouhuandev:serial-port-kit-core:$serialPortVersion" // 可选
+
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
 }
